--- a/app/src/main/res/layout/fragment_create_new_password.xml
+++ b/app/src/main/res/layout/fragment_create_new_password.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:hint="@string/password"
+            android:inputType="textPassword"
             android:textColor="@color/content"
             android:textColorHint="#A8A8A8"
             android:textSize="14sp"
@@ -44,6 +45,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:hint="@string/confirm_password"
+            android:inputType="textPassword"
             android:textColor="@color/content"
             android:textColorHint="#A8A8A8"
             android:textSize="14sp"
