--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -66,6 +66,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:hint="@string/password"
+            android:inputType="textPassword"
             android:textColor="@color/content"
             android:textColorHint="#A8A8A8"
             android:textSize="14sp"
@@ -88,6 +89,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:hint="@string/confirm_password"
+            android:inputType="textPassword"
             android:textColor="@color/content"
             android:textColorHint="#A8A8A8"
             android:textSize="14sp"
@@ -102,7 +104,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="2dp"
         android:text="@string/password_warning"
-        android:textColor="#525252"
+        android:textColor="@color/secondary_content"
         android:textSize="12sp"
         app:layout_constraintTop_toBottomOf="@id/clConfirmPassword" />
 
