--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -62,15 +62,13 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
+            app:popUpTo="@id/signInFragment"
+            app:popUpToSaveState="true"
             app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/createNewPasswordFragment"
         android:name="dev.ptit.ui.screen.login.CreateNewPasswordFragment"
         android:label="fragment_create_new_password"
-        app:enterAnim="@anim/slide_in_right"
-        app:exitAnim="@anim/slide_out_left"
-        app:popEnterAnim="@anim/slide_in_left"
-        app:popExitAnim="@anim/slide_out_right"
         tools:layout="@layout/fragment_create_new_password" />
 </navigation>
