--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -9,7 +9,18 @@
         android:id="@+id/homeFragment"
         android:name="dev.ptit.ui.screen.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_newsFragment"
+            app:destination="@id/newsFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToSaveState="true"/>
+        <action
+            android:id="@+id/action_homeFragment_to_matchesFragment"
+            app:destination="@id/matchesFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToSaveState="true"/>
+    </fragment>
     <fragment
         android:id="@+id/matchesFragment"
         android:name="dev.ptit.ui.screen.matches.MatchesFragment"
