--- a/app/src/main/res/layout/item_rv_home_header.xml
+++ b/app/src/main/res/layout/item_rv_home_header.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
+    android:id="@+id/clHomeHeader"
     tools:ignore="ContentDescription">
 
     <TextView
